--- a/ECommerce/ECommerce.Presentation/Views/Item/Add.cshtml
+++ b/ECommerce/ECommerce.Presentation/Views/Item/Add.cshtml
@@ -1,8 +1,24 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-
-<a> Go this ,,</a>
+﻿@using ECommerce.BusinessLogic.Requests
+@model ItemRequest
 
 
-
+<form method="post">
+    <div class="form-outline mb-4">
+        <input asp-for="Name" class="form-control" />
+        <label class="form-label">Item Name</label> 
+    </div>
+    <div class="form-outline mb-4">
+        <input asp-for="Description" class="form-control" />
+        <label class="form-label">Item Description</label>
+    </div>
+    <div class="form-outline mb-4">
+        <input type="number" class="form-control" />
+        <label class="form-label">Item Price</label>
+    </div>
+    <div class="d-flex justify-content-center">
+        <button type="submit"
+                class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">
+            Add
+        </button>
+    </div>
+</form>
