--- a/ECommerce/ECommerce.Presentation/Views/Item/Edit.cshtml
+++ b/ECommerce/ECommerce.Presentation/Views/Item/Edit.cshtml
@@ -4,21 +4,32 @@
 
 <form method="post" asp-action="Edit" enctype="multipart/form-data" asp-route-id="@Model.ID">
 
-    <div class="form-group">
-        <label asp-for="Name">Name</label>
-        <input asp-for="Name" class="form-control" placeholder="Name">
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Description">Description</label>
-        <input asp-for="Description" class="form-control" placeholder="Description">
-        <span asp-validation-for="Description" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Price">Price</label>
-        <input asp-for="Price" class="form-control" placeholder="Price">
-        <span asp-validation-for="Price" class="text-danger"></span>
-    </div>
+    <div class="border p-3 mt-4">
+        <div class="row pb-2">
+            <h2 style="text-align:center">Edit item</h2>
+            <hr />
+        </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="mb-3">
+            <label asp-for="Name">Name</label>
+            <input asp-for="Name" class="form-control" placeholder="Name">
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Description">Description</label>
+            <input asp-for="Description" class="form-control" placeholder="Description">
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Price">Price</label>
+            <input asp-for="Price" class="form-control" placeholder="Price">
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+
+        <button type="submit" class="btn btn-primary" style="width:150px;">Submit</button>
+    </div>
 </form>
+
+
+
+
