--- a/ECommerce/ECommerce.Presentation/Views/Item/Index.cshtml
+++ b/ECommerce/ECommerce.Presentation/Views/Item/Index.cshtml
@@ -1,17 +1,30 @@
 ﻿@using ECommerce.BusinessLogic.DTO_s;
 @model List<ItemDTO>
-
+@{
+	var host = Context.Request.Host.Host;
+	var scheme = Context.Request.Scheme;
+	var path = Context.Request.Host.Port;
+}
 <script type="text/javascript">
 	
-	function popUpWindow(id){
-		
+	function popUpWindow(id, host, port, scheme){
+		console.log()
+	
 		document.getElementById("window-verification").style.display = "block";
+		
+		document.getElementById("link-item").href = scheme + "://" + host + ":" + port + "/Item/Delete/" + id
+	}
+
+	function handleOnClickCancel() {
+		document.getElementById("window-verification").style.display = "none"; 
 	}
 </script>
 <style>
 	body{
 		z-index: 10;
 	}
+
+	
 	.window-show{
 		width:400px;
 		height:200px;
@@ -26,42 +39,83 @@
 		text-align: center;
 		align-items:center;
 		background:white;
+		margin-bottom:0px;
+		animation: animate .7s alternate ease-out;
 	}
 	.text-verification{
 		text-align: center;
 		vertical-align: middle;
 		line-height: 200px;
+		color:black;
+	}
+
+	.buttons{
+		position:absolute;
+		top: 135px;
+		right: 143px;
+	}
+
+	@@keyframes animate {
+		0% {transform: scale(.5);
+		opacity:0;
+		}
+		100% {transform: scale(1);
+			opacity: 1;
+		}
 	}
 </style>
-<br>
-<h2 style="text-align:center">List of items</h2>
-<a class="btn btn-primary btn-sm" href="/Item/Add" role="button">Add new item</a>
+
+
 <div id="window-verification" class="window-show">
 	<p class="text-verification">Are you sure you want to delete this item?</p>
+	<div class="buttons">
+		<a class="btn btn-danger" onclick="handleOnClickCancel()">Cancel</a>
+		<a class="btn btn-success" id="link-item">Ok</a>
+	</div>
 </div>
-<table class="table">
-	<thead>
-		<tr>
-			<th>ID</th>
-			<th>Name</th>
-			<th>Description</th>
-			<th>Price</th>
-		</tr>
-	</thead>
-	<tbody>
-		@foreach(var item in Model)
-		{
+
+
+<div class="container p-3">
+	<div class="row pt-4">
+		<div class="col-6" >
+			<h2 class="" style="color:white;">List of items</h2>
+		</div>
+		<div class="col-6 text-end">
+			<a class="btn btn-primary btn-sm" href="/Item/Add" role="button">
+				<i class="bi bi-plus-circle"></i> Add new item
+			</a>
+		</div>
+	</div>
+
+	<br /><br />
+
+	<table class="table table-bordered table-striped table-dark" style="width:100%">
+		<thead>
 			<tr>
-				<td>@item.ID</td>
-				<td>@item.Name</td>
-				<td>@item.Description</td>
-				<td>@item.Price</td>
-				
-				<td>
-					<a class="btn btn-primary btn-sm" href="/Item/Edit/@item.ID" >Edit</a>
-					<a class="btn btn-danger btn-sm"  onclick="popUpWindow(@item.ID)">Delete</a>
-				</td>
+				<th>ID</th>
+				<th>Name</th>
+				<th>Description</th>
+				<th>Price</th>
 			</tr>
-		}
-	</tbody>
-</table>
+		</thead>
+		<tbody>
+			@foreach (var item in Model)
+			{
+				<tr>
+					<td>@item.ID</td>
+					<td>@item.Name</td>
+					<td>@item.Description</td>
+					<td>@item.Price</td>
+
+					<td>
+						<a class="btn btn-primary btn-sm" href="/Item/Edit/@item.ID">Edit</a>
+						<a class="btn btn-danger btn-sm" onclick='popUpWindow("@item.ID", "@host", "@path", "@scheme");'>Delete</a>
+					</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
+
+
+
